# decision-first-runbooks-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FE_DESIGN_STYLE.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/decision-first-runbook-app/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: .env.example  Dockerfile  app.py  config.py  requirements.txt
backend/models/: base.py  enums.py  execution_environment.py  runbook.py  session.py  user.py
backend/repositories/: base.py  runbook.py  session.py  user.py
backend/services/: database.py  password.py  security.py  token.py
backend/tests/: test_app.py
backend/tests/integration/: conftest.py
backend/tests/integration/database/: test_runbook_repository.py  test_session_repository.py  test_user_repository.py
backend/tests/models/: test_execution_environment.py  test_runbook.py  test_session.py  test_user.py
backend/tests/unit/services/: test_password_service.py  test_security.py  test_token_service.py
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.test.jsx  index.css
scripts/: init-mongo.js
